--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=web
 # Configura la conexion a la base de datos MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/torneados
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=SaPe5105_
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configura Hibernate para manejar las tablas automaticamente (update: Modifica la estructura de la base de datos sin borrar datos existente)
