Actualizacion del back para trabajar desde el PC

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=web
 # Configura la conexion a la base de datos MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/torneados
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=SaPe5105_
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configura Hibernate para manejar las tablas automaticamente (update: Modifica la estructura de la base de datos sin borrar datos existente)
@@ -27,3 +27,4 @@ spring.security.oauth2.client.registration.google.client-id=366563127276-46kkhdb
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email,openid
 
+spring.web.resources.static-locations=classpath:/static/,file:src/main/resources/static/
