--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=web
 
 # Configura la conexion a la base de datos MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/torneados
-spring.datasource.username=root
-spring.datasource.password=SaPe5105_
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configura Hibernate para manejar las tablas automaticamente (update: Modifica la estructura de la base de datos sin borrar datos existente)
@@ -28,3 +28,5 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-a61XFGFBZ
 spring.security.oauth2.client.registration.google.scope=profile,email,openid
 
 spring.web.resources.static-locations=classpath:/static/,file:src/main/resources/static/
+
+
