--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,8 @@ spring.jackson.serialization.INDENT_OUTPUT=true
 # Hace que las consultas SQL en los logs sean más legibles agregando saltos de línea y tabulación.
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.security.oauth2.client.registration.google.client-id=366563127276-46kkhdbdbet6uiosaqb8kgp67m2tpcm2.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=profile,email,openid
 
 spring.web.resources.static-locations=classpath:/static/,file:src/main/resources/static/
